[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/white.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/chandelier.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/sfx/sfx_icecracked.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/sfx/sfx_glassbreak.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/sfx_menubutton4.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/sfx_descend.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 128, 32 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 128, 3.5 )

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 5 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 6 )

[node name="chandelier" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 128, 16 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 7 )
one_way_collision = true
one_way_collision_margin = 16.0

[node name="uncracked" type="Sprite" parent="."]
modulate = Color( 0, 0.431373, 1, 0.560784 )
scale = Vector2( 8, 1 )
texture = ExtResource( 1 )
centered = false

[node name="cracked" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 0.560784 )
scale = Vector2( 8, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 128, 4.5 )
shape = SubResource( 8 )

[node name="change" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 128, 16 )
stream = SubResource( 11 )
volume_db = -9.222
pitch_scale = 1.61
bus = "SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="change2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 128, 16 )
stream = SubResource( 10 )
volume_db = -11.361
bus = "SFX"

[node name="restoretimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="change3" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 128, 16 )
stream = SubResource( 5 )
bus = "SFX"

[node name="change4" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 128, 16 )
stream = SubResource( 9 )
volume_db = -5.0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="restoretimer" to="." method="_on_restoretimer_timeout"]
